# Lucas-Critique-and-Regimes

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
analyses/: 01_simulation_eda.ipynb  02_model_comparison.ipynb  03_lucas_critique_analysis.ipynb  04_project_report.ipynb  05_real_world_analysis.ipynb  model_notes.aux  model_notes.out  model_notes.tex  model_notes.toc  slides.aux  slides.nav  slides.out  slides.tex  slides.toc  slides.vrb
data/real_world/: CPIAUCSL.parquet  FEDFUNDS.parquet  GDPC1.parquet  INDPRO.parquet  UNRATE.parquet  USREC.parquet  lucas_combined.csv  lucas_cpiaucsl.csv  lucas_indpro.csv
data/simulated/: experiment_summary.csv  full_series.parquet  insample_results.csv  lucas_critique_comparison.csv  lucas_critique_mild.csv  lucas_critique_severe.csv  post_break.parquet  pre_break.parquet
src/data/: real_world.py
src/evaluation/: __init__.py  lucas_critique.py  metrics.py  visualization.py
src/lucas_critique_regimes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: __init__.py  hmm.py  linear_baselines.py  markov_switching.py  markov_switching_nn.py  mixture_experts.py  ml_regime.py  threshold.py
src/pipeline/: __init__.py  experiment.py
src/simulation/: __init__.py  dgp.py  lucas_shift.py
tests/: test_evaluation.py  test_models.py  test_pipeline.py  test_simulation.py
