[metadata]
name = lucas-critique-regimes
version = 0.1.0
description = Regime-switching models and the Lucas Critique: classical vs ML approaches on simulated data
author = Anonymous
license = MIT
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    pandas
    numpy
    scipy
    scikit-learn
    statsmodels
    hmmlearn
    xgboost
    matplotlib
    seaborn
    pyarrow
    requests

[options.extras_require]
dev =
    pre-commit
    pytest>=6
    pytest-cov

[options.packages.find]
where = src

[tool:pytest]
addopts = -ra
testpaths = tests

[flake8]
max-line-length = 100
extend-ignore = E203,W503
